# aluminum-os

./: .gitignore  Cargo.toml  KRAKOA_PROTOCOL.md  LICENSE  Makefile  README.md  desktop_state.txt  package.json  pnpm-lock.yaml  todo.md  uws  ux-audit-notes.md
client/: index.html
council/: COUNCIL_IDENTITY.md
diagrams/: civis_os_stack.mermaid  pantheon_council.mermaid  three_ring_architecture.mermaid
docs/: 90_Day_Modular_Rollout_Plan_India.md  ALUMINUM_OS_UNIFIED_FIELD_V3.md  CONSTITUTIONAL_BRIEF_NEUTRAL_OS.md  CONSTITUTIONAL_SUBSTRATE_V2.md  DATA_SOVEREIGNTY_DOCTRINE.md  FORK_SYNC_STRATEGY.md  Hormuz_Escort_Briefing_Scenario.md  KINTSUGI_50_PHD_FEASIBILITY_REPORT.md  TECH_CONVERGENCE_REPORT.md  architecture.md  capability_matrix.md
google-studio/: CHROME_MIGRATION_PROMPT.md  MIGRATION_INDEX.md
governance/: ARTIFACT_033_R2D2_THREE_TIER_AUTONOMY_LADDER.md  ARTIFACT_038_MONTE_CARLO_THREE_SOURCE_SYNTHESIS.md  ARTIFACT_065_CIVILIAN_AI_OVERSIGHT_DOCTRINE.md  ARTIFACT_066_TIERED_AUTONOMY_EXEC_MEMO.md  ARTIFACT_070_SHIELDED_VOICE_DOCTRINE.md  DATA_SOVEREIGNTY_PRESERVATION_DOCTRINE.md  DIFFUSED_INTEGRITY_DOCTRINE.md  GPT_COUNCIL_SYSTEMS_ANALYSIS.md  JACK_CLARK_ROUTING_MEMO.md
inventions/: ARTIFACT_054_SILICON_ANODE_BATTERY.md  (+7 more)
kintsugi/: README.md  (+1 more)
royalty-runtime/collector/: Cargo.toml
royalty-runtime/collector/src/: issuer.rs  main.rs
royalty-runtime/runtime-core/: Cargo.toml
royalty-runtime/runtime-core/benches/: throughput_bench.rs
royalty-runtime/runtime-core/src/: engine.rs  lib.rs  weighting.rs
royalty-runtime/runtime-core/tests/: hash_stability.rs
(+152 files in other folders)
