[package]
name = "aluminum-os"
version = "2.0.0"
edition = "2021"
description = "Aluminum OS — Constitutional Healthcare AI Governance Kernel (Forge Core v2.0)"
license = "MIT"
repository = "https://github.com/splitmerge420/aluminum-os"
authors = ["Atlas Lattice Foundation"]

[features]
default = ["std"]
std = []

[[bin]]
name = "aluminum-boot"
path = "src/main.rs"

[lib]
name = "aluminum_os"
path = "src/lib.rs"
