[package]
name = "royalty-collector"
version = "0.1.0"
edition = "2021"
description = "Royalty Runtime Collector — execution event ingestion and lease issuance"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"