[package]
name = "runtime-core"
version = "0.1.0"
edition = "2021"
description = "Royalty Runtime Core — deterministic lineage hashing, attribution, and lease-aware execution"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput_bench"
harness = false